<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".patient.ui.PatientActivity">

    <TextView
        android:id="@+id/idTitlePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/patient_title"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/namePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTitlePatient"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_namePatient"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/idPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namePatient"
        android:hint="@string/hint_idPatient"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/purple_ligth"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/sexPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idPatient"
        android:hint="@string/hint_sexPatient"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/addressPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sexPatient"
        android:hint="@string/hint_addressPatient"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/phonePatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressPatient"
        android:hint="@string/hint_phonePatient"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/purple_ligth"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/emailPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phonePatient"
        android:hint="@string/hint_emailPatient"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPatient"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailPatient"
        android:text="@string/text_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue_ligth"

        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailPatient"
        android:layout_marginRight="20dp"
        android:text="@string/text_button_back"
        android:backgroundTint="@color/blue_ligth"
        android:layout_toEndOf="@id/buttonPatient"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"

        />

</RelativeLayout>