<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MedicalRecord.ui.MedicalRecordActivity">

    <TextView
        android:id="@+id/idTitleMedicalRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tittleMedicalRecord"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/idMedicalRecordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTitleMedicalRecord"
        android:layout_marginTop="50dp"
        android:background="@color/purple_ligth"
        android:hint="@string/hint_idMedicalRecord"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/idMedicalRecordIdPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idMedicalRecordId"
        android:hint="@string/hint_idPatientMedicalRecord"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:padding="10dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/idMedicalRecordDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dateMedicalRecord"
        android:layout_below="@id/idMedicalRecordIdPatient"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/idMedicalRecordSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_symptomsMedicalRecord"
        android:layout_below="@id/idMedicalRecordDate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/purple_ligth"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />
    <EditText
        android:id="@+id/idMedicalRecordDiagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_diagnosisMedicalRecord"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_below="@id/idMedicalRecordSymptoms"
        android:background="@color/purple_ligth"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/idMedicalRecordNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idMedicalRecordDiagnosis"
        android:hint="Ingrese las notas del paciente"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/purple_ligth"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        android:padding="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Back"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/text_button_back"
        android:layout_below="@id/idMedicalRecordNotes"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue_ligth"
        android:layout_marginLeft="40dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccept"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/text_button"
        android:layout_below="@id/idMedicalRecordNotes"
        android:layout_toEndOf="@id/btn_Back"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/blue_ligth"
        android:layout_marginLeft="30dp"
        />
</RelativeLayout>