<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/idTitlleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/hint_tittleRegisterUser"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTitlleApp"
        android:background="@color/purple_ligth"
        android:layout_marginTop="60dp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:padding="20dp"
        android:drawableStart="@drawable/outline_account_box_24"

        />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputUserName"
        android:background="@color/purple_ligth"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:padding="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue_ligth"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:layout_marginLeft="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Back"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_marginTop="80dp"
        android:text="@string/text_button_back"
        android:textSize="18dp"
        android:backgroundTint="@color/blue_ligth"
        android:layout_toEndOf="@id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        />
</RelativeLayout>