<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewPatients"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:padding="4dp"
    app:cardBackgroundColor="#8A1E70"
    app:cardCornerRadius="35dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/idImagePatient"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/outline_cinematic_blur_24" />

        <TextView
            android:id="@+id/namePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_namePatientCard"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/namePatient"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_idPatientCard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sexPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idPatient"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_sexPatientCard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sexPatient"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_addressPatientCard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phonePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressPatient"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_phonePatientCard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phonePatient"
            android:layout_toEndOf="@id/idImagePatient"
            android:text="@string/hint_emailPatientCard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpdate"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_below="@id/emailPatient"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/idImagePatient"
            android:backgroundTint="@color/white"
            android:text="Actualizar"
            android:textColor="#8A1E70" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_below="@id/emailPatient"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/buttonUpdate"
            android:backgroundTint="@color/white"
            android:text="Eliminar"
            android:textColor="#8A1E70" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>